--- a/index.html
+++ b/index.html
@@ -34,25 +34,33 @@
     </nav>
 
     <body>
-        <div id="main">
-            <h1><span id="howdy">Hey</span>! I’m Clay.</h1>
-            <hr>
-            <img src="prof.JPG" alt="pretty pic of me that you're missing" id="profpic", height=275px, length=275px, style="position: absolute; top: 10%; right: 10%">
-            <p><span style="background-image: linear-gradient(transparent 20px, #0091ff8c 10px);">How are you?</span></p>
-            <p>Welcome to my website. Feel free to look around!</p>
-            <hr>
-            <p><span style="background-image: linear-gradient(transparent 10px, #ffee008c 10px);"><a href="aboutme.html">About Me</a></span> is a great place to start. Let me introduce myself.</p>
-            <p>The <span style="background-image: linear-gradient(transparent 10px, #ffee008c 10px);"><a href="profimage.html">Professional Image</a></span> details my intrest and contribution to my field. There you can find my <b>resume.</b></p>
-            <p>My <span style="background-image: linear-gradient(transparent 10px, #ffee008c 10px);"><a href="portfolio.html">Portfolio</a></span> is a hub that contains my previous and current projects.</p>
-            <p>Lastly, my <span style="background-image: linear-gradient(transparent 10px, #ffee008c 10px);"><a href="service.html">Service</a></span> page describes the ways I strive to give back to my community.</p>
-            <hr>
-            <p><span style="background-image: linear-gradient(transparent 20px, #0091ff8c 10px);">Let's connect! View my socials below.</span></p>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-11">
+                    <div id="main">
+                        <h1><span id="howdy">Hey</span>! I’m Clay.</h1>
+                        <hr>
+                        <p><span style="background-image: linear-gradient(transparent 20px, #0091ff8c 10px);">How are you?</span></p>
+                        <p>Welcome to my website. Feel free to look around!</p>
+                        <hr>
+                        <p><span style="background-image: linear-gradient(transparent 10px, #ffee008c 10px);"><a href="aboutme.html">About Me</a></span> is a great place to start. Let me introduce myself.</p>
+                        <p>The <span style="background-image: linear-gradient(transparent 10px, #ffee008c 10px);"><a href="profimage.html">Professional Image</a></span> details my intrest and contribution to my field. There you can find my <b>resume.</b></p>
+                        <p>My <span style="background-image: linear-gradient(transparent 10px, #ffee008c 10px);"><a href="portfolio.html">Portfolio</a></span> is a hub that contains my previous and current projects.</p>
+                        <p>Lastly, my <span style="background-image: linear-gradient(transparent 10px, #ffee008c 10px);"><a href="service.html">Service</a></span> page describes the ways I strive to give back to my community.</p>
+                        <hr>
+                        <p><span style="background-image: linear-gradient(transparent 20px, #0091ff8c 10px);">Let's connect! View my socials below.</span></p>
+                    </div>
+                </div>
+                <div class="col-lg-1">
+                    <img src="prof.JPG" alt="pretty pic of me that you're missing" id="profpic", height=275px, length=275px, style="position: absolute; top: 2%; right: 10%">
+                </div>
+            </div>
         </div>
         <div id='contact-footer'>
-            <a id='instagram' title='Instagram' target='_blank' href='https://instagram.com/clayjuneau'><i class="fab fa-instagram" style="font-size:30px"></i></a>
-            <a id='linkedin' title='LinkedIn' target='_blank' href='https://linkedin.com/in/clayjuneau'><i class="fab fa-linkedin" style="font-size:30px"></i></a>
-            <a id='github' title='GitHub' target='_blank' href='https://github.com/clayjuneau'><i class="fab fa-github" style="font-size:30px"></i></a>
-            <a id='email' title='Email' target='_blank' href='mailto:clayjuneau@gmail.com'><i class="fas fa-envelope" style="font-size:30px"></i></a>
+                <a id='instagram' title='Instagram' target='_blank' href='https://instagram.com/clayjuneau'><i class="fab fa-instagram" style="font-size:30px"></i></a>
+                <a id='linkedin' title='LinkedIn' target='_blank' href='https://linkedin.com/in/clayjuneau'><i class="fab fa-linkedin" style="font-size:30px"></i></a>
+                <a id='github' title='GitHub' target='_blank' href='https://github.com/clayjuneau'><i class="fab fa-github" style="font-size:30px"></i></a>
+                <a id='email' title='Email' target='_blank' href='mailto:clayjuneau@gmail.com'><i class="fas fa-envelope" style="font-size:30px"></i></a>
         </div>
     </body>
 </html>
