More responsive profpic

--- a/aboutme.html
+++ b/aboutme.html
@@ -43,7 +43,7 @@
             <p>🖥 I am passionate about the the ways CS and art intersect, specifically in the areas of UX and design.</p>
             <p>In my free time you can find me riding my bike 🚲, taking pictures 📷, or brewing my next batch of cold brew ☕.</p>
             <p id="status"> I am currently seeking an internship for Summer 2020 to further my experience in the intersection of Computer Science and Art, specifically in the area of UX.</p>
-            <p><span style="background-image: linear-gradient(transparent 10px, #ffee008c 10px);">I love meeting people! If you like in good conversations, feel free to reach out with any of the links below.</p>
+            <p><span style="background-image: linear-gradient(transparent 10px, #ffee008c 10px);">I love meeting people! If you like good conversations, feel free to reach out with any of the links below.</p>
         </div>
         <div id='contact-footer'>
             <a id='instagram' title='Instagram' target='_blank' href='https://instagram.com/clayjuneau'><i class="fab fa-instagram" style="font-size:30px"></i></a>
