--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <p>Lastly, my <span style="background-image: linear-gradient(transparent 10px, #ffee008c 10px);"><a href="service.html">Service</a></span> page describes the ways I strive to give back to my community.</p>
             <hr>
             <p><span style="background-image: linear-gradient(transparent 20px, #0091ff8c 10px);">Let's connect! View my socials below.</span></p>
-            <img src="prof.JPG" alt="pretty pic of me that you're missing" id="profpic", height=275px, length=275px, style="position: absolute; top: 15%; right: 10%">
+            <img id="profpic" src="prof.JPG" alt="pretty pic of me that you're missing" id="profpic", height=275px, length=275px, style="position: absolute; top: 15%; right: 10%">
         </div>
         <div id='contact-footer'>
                 <a id='instagram' title='Instagram' target='_blank' href='https://instagram.com/clayjuneau'><i class="fab fa-instagram" style="font-size:30px"></i></a>
