--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
         <div id="portfolio">
             <h1>Portfolio</h1>
             <hr>
-            <div style="text-align: center"><h4>All of my previous and current projects can be found on my <span style="background-image: linear-gradient(transparent 10px, #ffee008c 10px);"><a href='https://github.com/clayjuneau'>GitHub</a></span>. <span style="font-size: 12px">Last updated: 9/5/19</span></h4></div>
+            <div style="text-align: center"><h4>All of my previous and current projects can be found on my <span style="background-image: linear-gradient(transparent 10px, #ffee008c 10px);"><a href='https://github.com/clayjuneau'>GitHub</a></span></h4></div>
             <hr>
             <br>
             
