Changed card content

--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="fonts.css">
         <script src="https://kit.fontawesome.com/85c6b76167.js" crossorigin="anonymous"></script>
+        <script src="scroll.js"></script>
     </head>
     <body>
+
+        <div class="head">
+            <div class="progress-container">
+                <div class="progress-bar" id="myBar"></div>
+            </div>
+        </div>
         
         <div class="container">
             <div class="row">
@@ -50,8 +57,8 @@
                 <li data-aos="fade-up" data-aos-duration="600" class="thumbnail-grid-item">
                     <div class="card" style="background-image: url(tamuhack.jpg); background-size: contain; background-repeat: no-repeat;">
                         <div class="card-pants">
-                            <h4 class="card-title">TAMUhack</h4>
-                            <h5 class="card-subtitle">UI Design, Graphic Design, Event Logistics</h5>
+                            <h4 class="card-title">TAMUhack Event Website</h4>
+                            <h5 class="card-subtitle">UX/UI Design, Graphic Design, Event Logistics</h5>
                             <p class="card-content">One of the largest student-led hackathons in Texas</p>
                         </div>
                     </div>
@@ -64,7 +71,7 @@
                         <div class="card-pants">
                             <h4 class="card-title">Kiteflite</h4>
                             <h5 class="card-subtitle">UX/UI Design, Agile, APIs</h5>
-                            <p class="card-content">Getting you to the best location to fly your kite</p>
+                            <p class="card-content">A web mashup that gets to you to the best location to fly a kite</p>
                         </div>
                     </div>
                 </li>
