--- a/tamuhack.html
+++ b/tamuhack.html
@@ -35,33 +35,136 @@
         <br>
         <div class="container">
             <div class="row">
-                <div class="col-lg-7 col-md-7 col-sm-7 col-xs-7 case-head">
-                    <h2 class="header"><span class="">TAMUhack</span></h2>
-                    <p class="case-head">TAMUhack is one of the largest student-led hackathons in Texas. The event takes place at Texas A&M University in College Station. <br><br>
-                        I joined the design team in October 2019 to help put on the sixth iteration of the hackathon, TAMUhack 2020. <br><br>
+                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 case-head">
+                    <h2 class="header"><span class="">TAMUhack Website</span></h2>
+                    <p class="case-head">TAMUhack is one of the largest student-led hackathons in Texas with over 800 attendees. The event occurs annually at Texas A&M University in College Station. <br><br>
+                        I joined the team as a Design Director in October 2019 to help launch the sixth iteration of the hackathon, TAMUhack 2020.<br><br>
                     </p>
+                    <a href="https://tamuhack.com/" target="_blank">VISIT WEBSITE&nbsp&nbsp<i class="fas fa-external-link-alt fa-sm"></i></a>
                 </div>
-                <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                     <ol style="margin-left: 30%; margin-top: 10%">
-                        <li><a href="#problem">Problem</a></li>
+                        <li><a href="#challenge">Challenge</a></li>
                         <li><a href="#discovery">Discovery</a></li>
                         <li><a href="#process">Process</a></li>
                         <li><a href="#outcome">Outcome</a></li>
                     </ol>
                 </div>
             </div>
-            <a href="https://tamuhack.com/">VISIT WEBSITE&nbsp&nbsp<i class="fas fa-external-link-alt fa-sm"></i></a>
-            <br><br><hr><br>
+            <br><hr><br>
         </div>
 
-        <div id="problem" class="container">
-            <h1>The Problem</h1>
+        <div id="challenge" class="container">
+            <h1>The Challenge</h1>
             <br>
-            <p>TAMUhack exists to provide a space for creative software developers and designers to turn their ideas into reality....
-                
+            <p>
+                In order to produce the hackathon, our team needed <mark>a responsive and adaptable website to serve as a hub for hackers, company representatives, volunteers, and mentors</mark>. 
+                Not only did this website need to contain important information leading up to the event, but it also needed to support the capability of accommodating live updates during the event.
             </p>
             <br>
-            <p>stay tuned for the completion of this website!!!</p>
+            <h3>My Role</h3>
+            <p>
+                I took the lead in <mark>wireframing and prototyping the website using Figma</mark>. I worked as part of a small team of other designers and developers that helped me iterate through designs and make improvements. 
+                Among those people, <a class="inline" href="https://www.linkedin.com/in/gracekfan/" target="_blank">Grace Fan</a> designed the branding graphics for this year’s version of TAMUhack, and <a class="inline" href="https://www.linkedin.com/in/jonathan-innis/" target="_blank">Jonathan Innis</a> implemented the final design.
+            </p>
+            <br><hr><br>
+        </div>
+
+        <div id="discovery" class="container">
+            <h1>The Discovery</h1>
+            <br>
+            <h3>Our Users</h3>
+            <p>
+                Since the website was going to be frequently accessed by hackers, company representatives, volunteers, mentors, and potential sponsors and partners, 
+                it needed to provide specific information and functionality based on the wide variety of users while also maintaining simplicity. <mark>Our team decided we wanted to highlight as many 
+                features that are common between user personas as possible.</mark> That way, our website would have essential content while keeping usability high.
+            </p>
+            <br>
+            <p>
+                In order to figure out what the essential content for a particular user is, we developed a few <mark>mini personas</mark> using demographic statistics from pervious iterations of TAMUhack and registration data from this year.
+            </p>
+            <br>
+            <div class="row">
+                <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 persona">
+                    <h3 style="text-align: center;">Jeffery</h3>
+                    <p class="card-content" style="text-align: center">Computer Engineering student in Austin</p>
+                    <p class="card-content" style="text-align: center">First-time hackathon attendee</p>
+                    <br>
+                    <p class="card-subtitle" style="text-align: center">"I'm excited to participate in my first hackathon, but I'm unsure of what to expect."</p>
+                    <p style="text-decoration: underline;">Needs:</p>
+                    <p class="card-content">• Jeffery needs to know what he can do ahead of time to prepare for the event.</p>
+                    <p class="card-content">• When he arrives to College Station, Jeffery needs information on how to check-in and where to park near the venue.</p>
+                    <br>
+                    <p style="text-decoration: underline;">Frusterations:</p>
+                    <p class="card-content">• Jeffery needs to know what he can do ahead of time to prepare for the event.</p>
+                    <p class="card-content">• When he arrives to College Station, Jeffery needs information on how to check-in and where to park near the venue.</p>
+                </div>
+                <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 persona" style="margin-left: 7%">
+                    <h3 style="text-align: center;">Ingrid</h3>
+                    <p class="card-content" style="text-align: center">Software engineer at AmericanAirlines</p>
+                    <p class="card-content" style="text-align: center">Attending TAMUhack with collegues to represent company</p>
+                    <br>
+                    <p class="card-subtitle" style="text-align: center">"I am looking forward to meeting a ton of smart students and to seeing what they create!"</p>
+                    <p style="text-decoration: underline;">Needs:</p>
+                    <p class="card-content">• Ingrid anticipates leading a successful programming workshop during the hackathon.</p>
+                    <p class="card-content">• Ingrid is looking forward to meeting potential summer interns for her company.</p>
+                    <br>
+                    <p style="text-decoration: underline;">Frusterations:</p>
+                    <p class="card-content">• Ingrid doesn’t know the size of the room her workshop will take place, and she can’t plan logistics until she knows.</p>
+                    <p class="card-content">• Ingrid is unsure of how to contact hackers about internship interviews during the event.</p>
+                </div>
+            </div>
+            <br><hr><br>
+        </div>
+
+        <div id="process" class="container">
+            <h1>The Process</h1>
+            <br>
+            <p>
+                After knowing what our goals were, we set out to design, develop, and launch the pre-event website as soon as possible to ensure that users had access to essential content prior to the event. 
+                With this year’s branding graphics already created, my goal was to maintain consistency throughout all of our designs and platforms.
+            </p>
+            <br>
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                    <img src="tamuhack/preevent1.jpg" style="max-width: 100%; max-height: 100%;">
+                    <sub>Landing page / About</sub>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                    <img src="tamuhack/preevent2.jpg" style="max-width: 100%; max-height: 100%;">
+                    <sub>FAQ / Sponsors</sub>
+                </div>
+            </div>
+            <br><br>
+            <p>
+                With the live version of the website, <mark>we accommodated for the change in our users’ goals</mark> by moving more important sections to the top of the website. 
+                During the event, hackers are less interested in reading about the history of TAMUhack and more likely to seek resources and assistance on their project.
+            </p>
+            <br>
+            <div class="row">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    <img src="tamuhack/live1.jpg" style="max-width: 100%; max-height: 100%;">
+                    <sub>Landing page / Event info</sub>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    <img src="tamuhack/live2.jpg" style="max-width: 100%; max-height: 100%;">
+                    <sub>Schedule / resources</sub>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    <img src="tamuhack/live3.jpg" style="max-width: 100%; max-height: 100%;">
+                    <sub>Prizes / Compact FAQ</sub>
+                </div>
+            </div>
+            
+            <br><hr><br>
+        </div>
+
+        <div id="outcome" class="container">
+            <h1>The Outcome</h1>
+            <br>
+            <p>
+                The flexible and accommodating design of the TAMUhack 2020 website allowed for hackers, company representatives, volunteers, mentors, and other participants to have a positive experience at the hackathon!
+            </p>
         </div>
 
         <div class="container">
