Fixed spelling errors

--- a/tamuhack.html
+++ b/tamuhack.html
@@ -95,21 +95,21 @@
                     <p class="card-content">• Jeffery needs to know what he can do ahead of time to prepare for the event.</p>
                     <p class="card-content">• When he arrives to College Station, Jeffery needs information on how to check-in and where to park near the venue.</p>
                     <br>
-                    <p style="text-decoration: underline;">Frusterations:</p>
+                    <p style="text-decoration: underline;">Frustrations:</p>
                     <p class="card-content">• Jeffery needs to know what he can do ahead of time to prepare for the event.</p>
                     <p class="card-content">• When he arrives to College Station, Jeffery needs information on how to check-in and where to park near the venue.</p>
                 </div>
                 <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 persona" style="margin-left: 7%">
                     <h3 style="text-align: center;">Ingrid</h3>
                     <p class="card-content" style="text-align: center">Software engineer at AmericanAirlines</p>
-                    <p class="card-content" style="text-align: center">Attending TAMUhack with collegues to represent company</p>
+                    <p class="card-content" style="text-align: center">Attending TAMUhack with colleagues to represent company</p>
                     <br>
                     <p class="card-subtitle" style="text-align: center">"I am looking forward to meeting a ton of smart students and to seeing what they create!"</p>
                     <p style="text-decoration: underline;">Needs:</p>
                     <p class="card-content">• Ingrid anticipates leading a successful programming workshop during the hackathon.</p>
                     <p class="card-content">• Ingrid is looking forward to meeting potential summer interns for her company.</p>
                     <br>
-                    <p style="text-decoration: underline;">Frusterations:</p>
+                    <p style="text-decoration: underline;">Frustrations:</p>
                     <p class="card-content">• Ingrid doesn’t know the size of the room her workshop will take place, and she can’t plan logistics until she knows.</p>
                     <p class="card-content">• Ingrid is unsure of how to contact hackers about internship interviews during the event.</p>
                 </div>
