--- a/tamuhack.html
+++ b/tamuhack.html
@@ -81,7 +81,7 @@
             </p>
             <br>
             <p>
-                In order to figure out what the essential content for a particular user is, we developed a few <mark>mini personas</mark> using demographic statistics from pervious iterations of TAMUhack and registration data from this year.
+                In order to figure out what the essential content for a particular user is, we developed a few <mark>mini personas</mark> using demographic statistics from previous iterations of TAMUhack and registration data from this year.
             </p>
             <br>
             <div class="row">
@@ -96,8 +96,8 @@
                     <p class="card-content">• When he arrives to College Station, Jeffery needs information on how to check-in and where to park near the venue.</p>
                     <br>
                     <p style="text-decoration: underline;">Frustrations:</p>
-                    <p class="card-content">• Jeffery needs to know what he can do ahead of time to prepare for the event.</p>
-                    <p class="card-content">• When he arrives to College Station, Jeffery needs information on how to check-in and where to park near the venue.</p>
+                    <p class="card-content">• Jeffery is nervous that he won’t be able to find people to form a team when he gets there.</p>
+                    <p class="card-content">• Jeffery has a lot of questions about hackathons, and his hackathon-veteran friend won’t respond to his texts.</p>
                 </div>
                 <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 persona" style="margin-left: 7%">
                     <h3 style="text-align: center;">Ingrid</h3>
