--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div id="portfolio" class="container col-centered col-lg-12">
             <ul class="thumbnail-grid">
 
-            <a class="card-link" href="tamuhack">
+            <a class="card-link" href="tamuhack.html">
                 <li data-aos="fade-up" data-aos-duration="600" class="thumbnail-grid-item">
                     <div class="card" style="background-image: url(tamuhack.jpg); background-size: contain; background-repeat: no-repeat;">
                         <div class="card-pants">
@@ -65,7 +65,7 @@
                 </li>
             </a>
 
-            <a class="card-link" href="kiteflite">
+            <a class="card-link" href="kiteflite.html">
                 <li data-aos="fade-up" data-aos-duration="600" class="thumbnail-grid-item">
                     <div class="card" style="background-image: url(kiteflite.jpg); background-size: contain; background-repeat: no-repeat;">
                         <div class="card-pants">
