--- a/tamuhack.html
+++ b/tamuhack.html
@@ -28,7 +28,7 @@
 
         <div class="container">
             <div class="row">
-                <a href="index"><i class="fas fa-angle-double-left"></i> Back</a>
+                <a href="index.html"><i class="fas fa-angle-double-left"></i> Back</a>
             </div>
         </div>
         
