--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 links">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <a href="ClayJuneauResume.pdf" target="_blank">Resume</a>
                     <a href="https://linkedin.com/in/clayjuneau" target="_blank">LinkedIn</a>
                     <a href="https://github.com/clayjuneau" target="_blank">GitHub</a>
@@ -113,6 +113,27 @@
                 <div class="col-lg-12 section-br-small"></div>
             </div>
         </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 footer">
+                    <h5 class="card-subtitle">Designed and Coded with ♥ by Clay Juneau</h5>
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <a class="links" href="ClayJuneauResume.pdf" target="_blank">Resume</a>
+                        <a class="links" href="https://linkedin.com/in/clayjuneau" target="_blank">LinkedIn</a>
+                        <a class="links"  href="https://github.com/clayjuneau" target="_blank">GitHub</a class="links">
+                        <a class="links"  href="mailto:hello@clayjuneau.com" target="_blank">hello@clayjuneau.com</a class="links">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 section-br-small"></div>
+            </div>
+        </div>
+
 
         
 
