--- a/tamuhack.html
+++ b/tamuhack.html
@@ -85,7 +85,7 @@
             </p>
             <br>
             <div class="row">
-                <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 persona">
+                <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 persona">
                     <h3 style="text-align: center;">Jeffery</h3>
                     <p class="card-content" style="text-align: center">Computer Engineering student in Austin</p>
                     <p class="card-content" style="text-align: center">First-time hackathon attendee</p>
@@ -99,7 +99,7 @@
                     <p class="card-content">• Jeffery is nervous that he won’t be able to find people to form a team when he gets there.</p>
                     <p class="card-content">• Jeffery has a lot of questions about hackathons, and his hackathon-veteran friend won’t respond to his texts.</p>
                 </div>
-                <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 persona" style="margin-left: 7%">
+                <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 persona">
                     <h3 style="text-align: center;">Ingrid</h3>
                     <p class="card-content" style="text-align: center">Software engineer at AmericanAirlines</p>
                     <p class="card-content" style="text-align: center">Attending TAMUhack with colleagues to represent company</p>
@@ -163,8 +163,32 @@
             <h1>The Outcome</h1>
             <br>
             <p>
-                The flexible and accommodating design of the TAMUhack 2020 website allowed for hackers, company representatives, volunteers, mentors, and other participants to have a positive experience at the hackathon!
+                <em><mark>Great, not perfect. Always room for improvement.</mark></em>
             </p>
+            <br>
+            <p>
+                The accommodating and flexible design of the TAMUhack 2020 website allowed for over 800 hackers, 23 companies, and volunteers and mentors, to have a positive experience during the event!
+            </p>
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 section-br-small"></div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 footer">
+                    <h5 class="card-subtitle">Designed and Coded with ♥ by Clay Juneau</h5>
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <a class="links" href="ClayJuneauResume.pdf" target="_blank">Resume</a>
+                        <a class="links" href="https://linkedin.com/in/clayjuneau" target="_blank">LinkedIn</a>
+                        <a class="links"  href="https://github.com/clayjuneau" target="_blank">GitHub</a class="links">
+                        <a class="links"  href="mailto:hello@clayjuneau.com" target="_blank">hello@clayjuneau.com</a class="links">
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="container">
