--- a/kiteflite.html
+++ b/kiteflite.html
@@ -77,8 +77,8 @@
             <p>In order to develop an impactful and usable web application, we needed to first understand our users and stakeholders. <mark>We came up with user stories as an end goal that articulates what value our project will bring to our users.</mark></p>
             <br>
             <ul>
-                <li>As an avid kite enthusiast, I want to know a location that has optimal flying weather when my current location does not so that I can fly my kite whenever I want.</li>
-                <li>As an avid kite enthusiast, I want to know the best park and highly rated nearby cafe in my destination so I can be more familiar with the city when I arrive.</li>
+                <li>As an avid kite-flyer, I want to know a location that has optimal flying weather when my current location does not so that I can fly my kite whenever I want.</li>
+                <li>As an avid kite-flyer, I want to know the best park and highly rated nearby cafe in my destination so I can be more familiar with the city when I arrive.</li>
                 <li>As a user largely unfamiliar with kites, I want to be informed on what type of weather I should be flying my type of kite in so that I can have the best experience when I fly my kite.</li>
             </ul>
             <br><hr><br>
@@ -110,6 +110,7 @@
             <p>We used <a class="inline" href="https://openweathermap.org/api" target="_blank">OpenWeatherMap API</a> to gather current weather data from cities around the United States, and we determined the most ideal city to fly a user-inputted kite type based on optimal weather conditions. Next, we utilized <a class="inline" href="https://www.partners.skyscanner.net/affiliates/travel-apis" target="_blank">Skyscanner API</a> to find same-day flight itinerary from the user’s current location to the calculated destination. Lastly, the <a class="inline" href="https://www.yelp.com/developers" target="_blank">Yelp API</a> was used to find a highly rated park and café in that destination.</p>
             <br>
             <p>When the back-end was complete, we <mark>refined our front-end interface</mark> based off the conclusions of our user research. We implemented more instructions on what information is required from the users as well as an option for dark mode for higher accessibility.</p>
+            <br>
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                     <img src="kiteflite/light.jpg" style="max-width: 100%; max-height: 100%;">
