Added Google Analytics

--- a/csce445.html
+++ b/csce445.html
@@ -35,6 +35,15 @@
                 font-size: 1.5vw;
             }
         </style>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155864934-1"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-155864934-1');
+        </script>
     </head>
     <body>
         
