--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
         <link rel="stylesheet" href="fonts.css">
         <script src="https://kit.fontawesome.com/85c6b76167.js" crossorigin="anonymous"></script>
         <script src="scroll.js"></script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155864934-1"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-155864934-1');
+        </script>
     </head>
     <body>
 
