Implemented new progress bar

--- a/csce445.html
+++ b/csce445.html
@@ -47,11 +47,7 @@
         </style>
     </head>
     <body>
-        <div class="head">
-            <div class="progress-container">
-                <div class="progress-bar" id="myBar"></div>
-            </div>
-        </div>
+        <div id="_progress"></div>
         
         <div class="container">
             <div class="row">
