--- a/kiteflite.html
+++ b/kiteflite.html
@@ -23,11 +23,7 @@
     </head>
     <body>
 
-        <div class="head">
-            <div class="progress-container">
-                <div class="progress-bar" id="myBar"></div>
-            </div>
-        </div>
+        <div id="_progress"></div>
         
         <div class="container">
             <div class="row">
