--- a/google2020.html
+++ b/google2020.html
@@ -187,7 +187,7 @@
             <br>
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    <img src="google/question.svg" style="max-width: 100%; max-height: 100%;">
+                    <img src="google/questions.svg" style="max-width: 100%; max-height: 100%;">
                     <sub>Questionnaire</sub>
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8" style="padding-left: 15%; padding-top:10%">
