--- a/google2020.html
+++ b/google2020.html
@@ -187,7 +187,7 @@
             <br>
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    <img src="google/questions.svg" style="max-width: 100%; max-height: 100%;">
+                    <img src="google/questions-hifi.png" style="max-width: 100%; max-height: 100%;">
                     <sub>Questionnaire</sub>
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8" style="padding-left: 15%; padding-top:10%">
@@ -206,14 +206,14 @@
                     <p>The cards are clearly marked with overlapping interests between users, so users instantly know who is compatible.</p>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    <img src="google/explore.svg" style="max-width: 100%; max-height: 100%;">
+                    <img src="google/explore-hifi.png" style="max-width: 100%; max-height: 100%;">
                     <sub>Explore page</sub>
                 </div>
             </div>
             <br><p style="font-family: 'Circular Std Thin'; text-align: center; font-size: 25px;">. . .</p><br>
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    <img src="google/profileviewer.svg" style="max-width: 100%; max-height: 100%;">
+                    <img src="google/profile-hifi.png" style="max-width: 100%; max-height: 100%;">
                     <sub>Profile view</sub>
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8" style="padding-left: 15%; padding-top:10%">
