--- a/google2020.html
+++ b/google2020.html
@@ -43,7 +43,7 @@
                 <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 case-head">
                     <h2 class="header"><span class="">MentMatch</span></h2>
                     <p class="case-head">A project for the 2020 Google Design Exercise. <br><br>
-                        I will walk through my design process and elaborate on my design decisions while completing this exercise.<br><br>
+                        I will walk through my design process and elaborate on the design decisions that I made while completing this exercise.<br><br>
                     </p>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
@@ -74,7 +74,7 @@
             <p>Before attempting to solve any problem, we should take a closer look into the issue at hand.</p>
             <br>
             <h3>Finding the Problem</h3>
-            <p>We want to make it strengthen the community of students at my school by providing an experience for people to create mentor / mentee relationships. The current underlying problem is that students are not seeking each other out to make these connections.</p>
+            <p>We want to strengthen the community of students at my school by providing an experience for people to create mentor / mentee relationships. The current underlying problem is that students are not seeking each other out to make these connections.</p>
             <br>
             <p>Why are people not seeking to create these relationships? As I discovered in this research phase, students are overwhelmed by the amount of opportunities to meet people or students feel like their need for mentorship is unreciprocated.</p>
             <br>
@@ -94,18 +94,18 @@
             </div>
             <br><br>
             <h3>Solving the Problem</h3>
-            <p>With these discoveries in mind, I decided to come up with a central goal for the app.</p>
+            <p>With these discoveries in mind, I decided to come up with a central mission statement for the app.</p>
             <br>
-            <p style="font-weight: bolder; font-style: italic;">Get mentors to find mentees and get mentees to find mentors.</p>
+            <p style="font-weight: bolder; font-style: italic;">Get mentors to find mentees, and get mentees to find mentors.</p>
             <br>
-            <p>In order to achieve this goal, I created three goals that I would focus on:</p>
+            <p>In order to achieve this mission statement, I created three goals that I would focus on:</p>
             <ol style="padding-left: 10%">
                 <li style="font-weight: bolder;">Allow users to start finding matches instantly</li>
                 <li style="font-weight: bolder;">Provide information for users to find the best match possible</li>
                 <li style="font-weight: bolder;">Make the journey from sign up to match simple and clear</li>
             </ol>
             <br>
-            <p>Now that we know what the problem is and our approach to solving it, we can start the design process.</p>
+            <p>Now that we know what the problem is and what the approach to solving it is, we can start the design process.</p>
             <br><hr><br>
         </div>
 
@@ -123,7 +123,7 @@
                 </div>
             </div>
             <br><br>
-            <p>After a few more iterations of the user flow on paper, I took the design to Adobe XD where I could develop a low fidelity wireframe.</p>
+            <p>After a few more iterations of the user flow on paper, I took the design to Adobe XD where I had more flexibility to develop a low fidelity wireframe.</p>
             <br>
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -132,9 +132,9 @@
                 </div>
             </div>
             <br><br>
-            <p>The overall user journey can be split up in three main stages. The user’s profile including the initial profile creation, exploring other profiles, and contacting a suitable match. The tabs located in the bottom navigation bar makes transitioning between stages fluid. This clear and simple navigation contributes to goal #3.</p>
+            <p>The overall user journey can be split up in three main stages. The user’s profile including the initial profile creation, exploring other profiles, and contacting a suitable match. The tabs located in the bottom navigation bar makes transitioning between stages fluid. This clear and simple navigation contributes to achieving goal #3.</p>
             <br>
-            <p>Since messaging and saving profiles works similarly to other applications with the same features, I won’t go into detail about how they function.</p>
+            <p>Since messaging and saving profiles works similarly to other applications, I won’t go into detail about how they function.</p>
             <br>
             <p>Let’s discuss the most important sections in the user flow.</p>
             <br>
@@ -150,9 +150,9 @@
             <br><br>
             <p>The welcome screen is fairly simple. The user will get an introduction to the app and immediately be prompted to start setting up a profile based on their user identity.</p>
             <br>
-            <p>The questionnaire is also simple. Once we’ve identified who our user is, they will begin to answer a series of questions in order to completely fill in their profile based on their answers. The quick automatic profile completion is the largest contributor to goal #1. 
-                When the user finishes their questionnaire, they are instantly ready to start the search for a match. If they desire, users will have the option to update or add to the information that was automatically filled on their profile page. 
-                With goal #3 in mind, the questionnaire splits up the overwhelming stare of a blank profile into approachable questions that users feel comfortable answering one at a time.
+            <p>The questionnaire is also simple. Once the user is identified, they will begin to answer a series of questions in order to completely fill in their profile based on their answers. The quick automatic profile completion is the largest contributor to goal #1. 
+                When the user finishes their questionnaire, they are instantly ready to start the search for a match. If they desire, users will have the option to change or add information that was automatically filled on their profile page. 
+                With goal #3 in mind, the questionnaire splits up the overwhelming stare of a blank profile into small approachable questions that users feel comfortable answering one at a time.
             </p>
             <br>
             <p>If the user decides to skip the questionnaire, they are taken to the explore page where they can only view profiles. A notification card urges the user to complete the questionnaire, and it remains there until a profile is created. </p>
@@ -166,17 +166,17 @@
                     <sub>Explore page / profile view</sub>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
-                    <p>Like profile creation, the explore page is simple. We do not want any unnecessary distractions for a user trying to achieve their goal of a mentor / mentee.</p>
+                    <p>Like profile creation, the explore page is simple. We do not want any unnecessary distractions for a user trying to reach their end goal of finding a mentor / mentee.</p>
                     <br>
                     <p>Based on the user’s identity chosen on the welcome screen, the explore page will show profiles of the compatible identity. If you are looking to become a mentor, you will see potential mentees. 
                         If you are looking to become a mentee, you will see potential mentors. In order to achieve goal #2, each profile on the explore page is comprised of compact cards with key information such as name, age, and interests. 
                     </p>
                     <br>
-                    <p>Profiles with the closest match to the user’s answered questions will appear at the top, highlighting the reasons they would be a good match. Profiles with little compatibility to the user will not be hidden, they will just appear lower down on the list. Additionally, users have the option to filter results based on desired criteria.</p>
+                    <p>Profiles with the closest match to the user’s answered questions will appear at the top, highlighting the aspects that makes them a good match. Profiles with little compatibility to the user will not be hidden. Instead, they will just appear lower down on the list. Additionally, users have the option to filter results based on desired criteria like age, major, or interests.</p>
                 </div>
             </div>
             <br>
-            <p>In an effort to achieve goals #2 and #3, the full screen profile viewer provides the user with only necessary information to aid the user in moving forward in the process.</p>
+            <p>In an effort to achieve goals #2 and #3, the full screen profile viewer provides the user with only necessary information to aid them in moving forward in the flow.</p>
             <br>
             <p>With a full view of profile information, compatible criteria is highlighted, informing the user why this profile is a good match. Competing products would bombard the user with irrelevant information, making it more difficult to make a decision.</p>
             <br>
@@ -191,7 +191,7 @@
                     <sub>Questionnaire</sub>
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8" style="padding-left: 15%; padding-top:10%">
-                    <p>The profile setup contains a lot of questions, so in order to expedite the process and accomplish goal #1, the user should be able to understand what is asked of them quickly. No clutter to get in the way.</p>
+                    <p>The profile setup contains a lot of questions, so in order to expedite the process and accomplish goal #1, the user should be able to understand what is asked quickly. No clutter to get in the way.</p>
                     <br>
                     <p>The indicator at the bottom lets the user know how much of the questionnaire is left. If they need to change an answer, the arrows let them navigate seamlessly between questions.</p>
                 </div>
@@ -203,7 +203,7 @@
                     <br>
                     <p>Uniform and clean compact cards display key information allowing users to browse for a match without feeling overwhelmed.</p>
                     <br>
-                    <p>The cards are clearly marked with overlapping interests between users, so users instantly know who is compatible.</p>
+                    <p>The cards are clearly marked with overlapping interests between users, so they instantly know who is most compatible with them.</p>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                     <img src="google/explore-hifi.png" style="max-width: 100%; max-height: 100%;">
@@ -222,17 +222,11 @@
                     
                 </div>
             </div>
-
-        </div>
-        <br><hr><br>
+            <br><hr><br>
         </div>
 
         <div id="outcome" class="container">
             <h1>Stretch Goals</h1>
-            <br>
-            <p>
-                <em><mark>Great, not perfect. Always room for improvement.</mark></em>
-            </p>
             <br>
             <p>If I were designing this product as a Google employee, I would extend our goals by taking advantage of the massive Google platform.</p>
             <br>
