Added pictures to personas

--- a/tamuhack.html
+++ b/tamuhack.html
@@ -91,21 +91,23 @@
             <br>
             <div class="row">
                 <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 persona">
-                    <h3 style="text-align: center;">Jeffery</h3>
+                    <h3 style="text-align: center;">Jeffrey</h3>
+                    <div style="text-align: center;"><img src="tamuhack/jeffrey.png" style="max-width: 35%;"></div> <br>
                     <p class="card-content" style="text-align: center">Computer Engineering student in Austin</p>
                     <p class="card-content" style="text-align: center">First-time hackathon attendee</p>
                     <br>
                     <p class="card-subtitle" style="text-align: center">"I'm excited to participate in my first hackathon, but I'm unsure of what to expect."</p>
                     <p style="text-decoration: underline;">Needs:</p>
-                    <p class="card-content">• Jeffery needs to know what he can do ahead of time to prepare for the event.</p>
-                    <p class="card-content">• When he arrives to College Station, Jeffery needs information on how to check-in and where to park near the venue.</p>
+                    <p class="card-content">• Jeffrey needs to know what he can do ahead of time to prepare for the event.</p>
+                    <p class="card-content">• When he arrives to College Station, Jeffrey needs information on how to check-in and where to park near the venue.</p>
                     <br>
                     <p style="text-decoration: underline;">Frustrations:</p>
-                    <p class="card-content">• Jeffery is nervous that he won’t be able to find people to form a team when he gets there.</p>
-                    <p class="card-content">• Jeffery has a lot of questions about hackathons, and his hackathon-veteran friend won’t respond to his texts.</p>
+                    <p class="card-content">• Jeffrey is nervous that he won’t be able to find people to form a team when he gets there.</p>
+                    <p class="card-content">• Jeffrey has a lot of questions about hackathons, and his hackathon-veteran friend won’t respond to his texts.</p>
                 </div>
                 <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 persona">
                     <h3 style="text-align: center;">Ingrid</h3>
+                    <div style="text-align: center;"><img src="tamuhack/ingrid.png" style="max-width: 35%;"></div> <br>
                     <p class="card-content" style="text-align: center">Software engineer at AmericanAirlines</p>
                     <p class="card-content" style="text-align: center">Attending TAMUhack with colleagues to represent company</p>
                     <br>
